syntax = "proto3";

package monad_proto.message;

import "basic.proto";
import "block.proto";
import "blocksync.proto";
import "discovery.proto";
import "signing.proto";
import "timeout.proto";
import "voting.proto";


message ProtoVoteMessage {
  monad_proto.voting.ProtoVote vote = 1;
  monad_proto.signing.ProtoSignature sig = 2;
}

message ProtoBlockSyncRequestMessage {
  oneof request_type {
    monad_proto.blocksync.ProtoBlockRange block_range = 1;
    monad_proto.basic.ProtoBlockBodyId block_body_id = 2;
  }
}

message ProtoBlockSyncResponseMessage {
  oneof blocksync_response {
    monad_proto.blocksync.ProtoBlockSyncHeadersResponse headers_response = 1;
    monad_proto.blocksync.ProtoBlockSyncBodyResponse body_response = 2;
  }
}

message ProtoTimeoutMessage {
  monad_proto.timeout.ProtoTimeout timeout = 1;
  monad_proto.signing.ProtoSignature sig = 2;
}

message ProtoProposalMessage {
  monad_proto.block.ProtoBlockHeader block_header = 1;
  monad_proto.block.ProtoBlockBody block_body = 2;
  optional monad_proto.timeout.ProtoTimeoutCertificate last_round_tc = 3;
}

message ProtoUnverifiedConsensusMessage {
  oneof OneofMessage {
    ProtoProposalMessage proposal = 1;
    ProtoTimeoutMessage timeout = 2;
    ProtoVoteMessage vote = 3;
  }
  uint32 version = 4;
  monad_proto.signing.ProtoSignature author_signature = 6;
}

message ProtoForwardedTx {
  repeated bytes tx = 1;
}

message ProtoStateSyncRequest {
  uint32 version = 7;

  uint64 prefix = 1;
  uint32 prefix_bytes = 2;
  uint64 target = 3;
  uint64 from = 4;
  uint64 until = 5;
  uint64 old_target = 6;
}

enum ProtoStateSyncUpsertType {
  CODE = 0;
  ACCOUNT = 1;
  STORAGE = 2;
  ACCOUNT_DELETE = 3;
  STORAGE_DELETE = 4;
  HEADER = 5;
}

message ProtoStateSyncUpsert {
  ProtoStateSyncUpsertType type = 1;
  bytes data = 2;
}

message ProtoStateSyncResponse {
  uint32 version = 4;
  uint64 nonce = 5;
  uint32 response_index = 6;

  ProtoStateSyncRequest request = 1;
  repeated ProtoStateSyncUpsert upserts = 2;
  uint64 n = 3;
}

message ProtoStateSyncBadVersion {
  uint32 min_version = 1;
  uint32 max_version = 2;
}

message ProtoStateSyncCompletion {
  uint64 session_id = 1;
}

message ProtoStateSyncNetworkMessage {
  oneof OneofMessage {
    ProtoStateSyncRequest request = 1;
    ProtoStateSyncResponse response = 2;
    ProtoStateSyncBadVersion bad_version = 3;
    ProtoStateSyncCompletion completion = 4;
  }
}

message ProtoMonadMessage {
  oneof OneofMessage {
    ProtoUnverifiedConsensusMessage consensus = 1;
    ProtoBlockSyncRequestMessage block_sync_request = 2;
    ProtoBlockSyncResponseMessage block_sync_response = 3;
    ProtoForwardedTx forwarded_tx = 5;
    ProtoStateSyncNetworkMessage state_sync_message = 6;
    ProtoPingRequest ping_request = 7;
    ProtoPingResponse ping_response = 8;
  }
}
message ProtoDiscoveryRequest {
  monad_proto.discovery.ProtoMonadNameRecord self = 1;
}

message ProtoDiscoveryResponse {
  repeated monad_proto.discovery.ProtoMonadNameRecord peers = 1;
}

message ProtoDiscoveryMessage {
  oneof message {
    ProtoDiscoveryRequest request = 1;
    ProtoDiscoveryResponse response = 2;
  }
}

message ProtoRouterMessage {
  oneof message {
    // keep compatible with ProtoMonadMessage
    bytes app_message = 7;
    ProtoDiscoveryMessage discovery_message = 8;
  }
}

message ProtoPingRequest {
  uint64 sequence = 1;
}

message ProtoPingResponse {
  uint64 sequence = 1;
}